# dales

./: CMakeLists.txt
cases/helloworld/: CMakeLists.txt  Readme.md
src/: CMakeLists.txt  modfielddump.f90  modstartup.f90  modsurfdata.f90
